# vpp-ips

./: .gitignore  build.sh
vpp/: .clang-tidy  autorun.sh
vpp/src/: CMakeLists.txt
vpp/src/plugins/dpdk/device/: common.c  dpdk.h  init.c
vpp/src/plugins/ips_mirror/: ADVANCED_FEATURES.md  ARCHITECTURE_FIX.md  CMakeLists.txt  CMakeLists.txt.full  CMakeLists_old.txt  COMPILATION_FIX_SUMMARY.md  COMPILING_FIXES.md  COMPILING_PROGRESS.md  IPS_RULE_MATCHING_ARCHITECTURE.md  LINT_FIXES.md  NAMING_CLEANUP_SUMMARY.md  PROTOCOL_DETECTION_REFACTOR_SUMMARY.md  README.md  README_RULES.md  REFACTORING_SUMMARY.md  RENAMING_MAP.md  SESSION_TIMER_OPTIMIZATION.md  SURICATA_DETECTION_README.md  SURICATA_ENGINE_COMPLETION_SUMMARY.md  SURICATA_ENGINE_IMPLEMENTATION_PLAN.md  SURICATA_ENGINE_REFACTOR_SUMMARY.md  check_nodes.sh  ips.api  ips.api.c  ips.api.h  ips.api_enum.h  ips.api_types.h  ips.c  ips.h  ips_api.c  ips_cli.c  ips_logging.c  ips_logging.h  ips_multi_content.c  ips_node.c  ips_rule_parser_advanced.c.backup  ips_session_timer.h  ips_tcp_acl_node.c  ips_tcp_reorder_node.c  ips_tcp_session_node.c  (+6 more)
vpp/src/plugins/ips_mirror/acl/: README.md  ips_acl.api  ips_acl.c  ips_acl.h  ips_acl_cli.c
vpp/src/plugins/ips_mirror/block/: README.md  ips_block.c  ips_block.h  ips_block_cli.c  ips_block_node.c
vpp/src/plugins/ips_mirror/common/: README.md  ips_flow.c  ips_flow.h  ips_pcre_hyperscan.c  ips_pcre_hyperscan_enhanced.c  ips_pcre_support.c  ips_proto.c  ips_proto.h  ips_response.c  ips_response.h
vpp/src/plugins/ips_mirror/detection/: README.md  ips_byte_operations.c  ips_byte_operations.h  ips_detection.c  ips_detection.h  ips_detection_advanced.c  ips_detection_enhanced.c  ips_detection_module.c  ips_detection_module.h  ips_detection_optimized.c  ips_detection_temp.c  ips_detection_types.h  ips_flowbits.c  ips_flowbits.h  ips_hyperscan_engine.c  ips_hyperscan_engine.h  ips_inspect_node.c  ips_multi_content_detection.c  ips_pcre_engine.c  ips_pcre_engine.h  ips_rule_index.c  ips_rule_index.h  ips_suricata_cli.c  ips_suricata_engine.h  ips_suricata_engine_core.c  ips_suricata_enhanced_engine.h  ips_suricata_enhanced_parser.c  ips_suricata_enhanced_parser.h  ips_suricata_inspect_node.c  ips_suricata_integration.c  ips_suricata_integration.h  ips_suricata_parser.c  ips_suricata_parser.h  ips_suricata_rule_types.h  ips_suricata_rule_utils.c
vpp/src/plugins/ips_mirror/docs/: API_INTERFACE_DOCUMENTATION.md  TESTING_GUIDE.md  api.md  testing.md
vpp/src/plugins/ips_mirror/ips/: ips.api.c  ips.api.h  ips.api_enum.h  ips.api_types.h
vpp/src/plugins/ips_mirror/protocols/: README.md  ips_dns_parser.c  ips_dns_parser.h  ips_http_parser.c  ips_http_parser.h  ips_protocol_detect_node.c  ips_protocol_detection.c  ips_protocol_detection.h  ips_tls_parser.c  ips_tls_parser.h
vpp/src/plugins/ips_mirror/rules/: README.md  default.rules  ips_enhanced_parser.c  ips_enhanced_suricata_parser.c  ips_multi_content_parser.c  ips_rule_parser.c  ips_rule_parser.h  ips_rules_module.c  ips_rules_module.h
vpp/src/plugins/ips_mirror/session/: README.md  ips_session.c  ips_session.h  ips_session_cli.c  ips_session_timer.c  ips_session_timer.h  ips_tcp_reorder.c  ips_tcp_reorder.h  ips_timer_cli.c
vpp/src/scripts/: .version
vpp/src/vnet/ethernet/: ethernet.h  node.c
vpp/src/vpp-api/python/vpp_papi.egg-info/: PKG-INFO  SOURCES.txt
